@@ -6,7 +6,10 @@ analysis by Joshua Varner). Fix auto-adjustment code when setting min
 to 0 for an axis where the dataset is completely flat on that axis
 (report by chovy). Fixed a bug with passing in data from getData to
 setData when the secondary axes are used (issue 65, reported by
-nperelman).
+nperelman). Fixed so that it is possible to turn lines off when no
+other chart type is shown (based on problem reported by Glenn
+Vanderburg), and fixed so that setting lineWidth to 0 also hides the
+shadow (based on problem reported by Sergio Nunes).
 
 
 Flot 0.5
